--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <header>
             <h1 id="heading">QR Code Generator</h1>
             <p id="para">Paste a URL or enter a Text to Generate QR Code</p>
+            <p id="emp" style="color: red;"></p>
         </header>
         <div class="form">
             <input type="text" placeholder="Enter text or url" spellcheck="false">
